--- a/index.html
+++ b/index.html
@@ -1,85 +1,84 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mais Transparência - MT</title>
+  <title>Mais Transparência MT</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body class="bg-gray-50 text-gray-900">
-  <header class="bg-blue-800 text-white p-6">
-    <h1 class="text-3xl font-bold">Projeto Mais Transparência - MT</h1>
-    <p class="text-lg">Transparência, Dados Abertos e Cidadania em Mato Grosso</p>
+<body class="bg-white text-gray-800">
+  <header class="bg-blue-900 text-white p-6 text-center">
+    <h1 class="text-4xl font-bold mb-2">Projeto Mais Transparência MT</h1>
+    <p class="text-lg">Transformando dados públicos em cidadania ativa e controle social em Mato Grosso.</p>
   </header>
 
-  <nav class="bg-blue-100 p-4 flex flex-wrap gap-4 justify-center">
-    <a href="#qi" class="text-blue-900 font-semibold hover:underline">Q.I. – Quem Indica</a>
-    <a href="#caiu" class="text-blue-900 font-semibold hover:underline">Caiu na Conta</a>
-    <a href="#legislupa" class="text-blue-900 font-semibold hover:underline">LegisLupa</a>
-    <a href="#capivara" class="text-blue-900 font-semibold hover:underline">Capivara MT</a>
-    <a href="#obras" class="text-blue-900 font-semibold hover:underline">Onde Foi Parar?</a>
-    <a href="#painel" class="text-blue-900 font-semibold hover:underline">Painel de Dados</a>
-    <a href="#denuncie" class="text-blue-900 font-semibold hover:underline">Denuncie</a>
+  <nav class="bg-blue-100 p-4 flex flex-wrap justify-center gap-4 text-blue-900 font-semibold">
+    <a href="#sobre" class="hover:underline">Sobre</a>
+    <a href="#subprojetos" class="hover:underline">Subprojetos</a>
+    <a href="#painel" class="hover:underline">Painel de Dados</a>
+    <a href="#contato" class="hover:underline">Contato</a>
   </nav>
 
-  <main class="max-w-5xl mx-auto p-6 space-y-12">
-    <section>
-      <h2 class="text-2xl font-bold mb-2">Sobre o Projeto</h2>
-      <p>O Projeto Mais Transparência é uma iniciativa cívica que promove a fiscalização do uso de emendas parlamentares, verbas indenizatórias e a atuação de vereadores e deputados em Mato Grosso. Tudo com base em dados públicos, acessíveis e organizados.</p>
+  <main class="max-w-6xl mx-auto p-6 space-y-12">
+    <section id="sobre">
+      <h2 class="text-2xl font-bold mb-4">Sobre o Projeto</h2>
+      <p>O Projeto <strong>Mais Transparência MT</strong> é uma plataforma cívica independente que fiscaliza o uso de recursos públicos no Estado de Mato Grosso. Acompanhamos emendas parlamentares, verbas indenizatórias, atuação legislativa e execução de obras públicas, sempre com dados abertos, visualizações claras e participação cidadã.</p>
     </section>
 
-    <section id="qi">
-      <h3 class="text-xl font-semibold text-blue-800">Q.I. – Quem Indica</h3>
-      <p>Descubra quem indica recursos públicos, para onde vão e com qual finalidade.</p>
-    </section>
-
-    <section id="caiu">
-      <h3 class="text-xl font-semibold text-blue-800">Caiu na Conta</h3>
-      <p>Monitore os reembolsos mensais de parlamentares: alimentação, combustível, aluguel e muito mais.</p>
-    </section>
-
-    <section id="legislupa">
-      <h3 class="text-xl font-semibold text-blue-800">LegisLupa</h3>
-      <p>Acompanhe a atuação dos vereadores de Mato Grosso: presença, projetos e gastos.</p>
-    </section>
-
-    <section id="capivara">
-      <h3 class="text-xl font-semibold text-blue-800">Capivara MT</h3>
-      <p>Puxe a capivara dos seus representantes. Veja processos, patrimônio e histórico político.</p>
-    </section>
-
-    <section id="obras">
-      <h3 class="text-xl font-semibold text-blue-800">Onde Foi Parar?</h3>
-      <p>Acompanhe obras públicas prometidas e executadas com emendas parlamentares.</p>
+    <section id="subprojetos">
+      <h2 class="text-2xl font-bold mb-4">Nossos Subprojetos</h2>
+      <ul class="space-y-4">
+        <li>
+          <h3 class="text-xl font-semibold text-blue-800">Q.I. – Quem Indica</h3>
+          <p>Rastreia as emendas parlamentares: quem indica, para onde vai e com qual impacto.</p>
+        </li>
+        <li>
+          <h3 class="text-xl font-semibold text-blue-800">Caiu na Conta</h3>
+          <p>Monitora reembolsos e verbas indenizatórias: alimentação, combustível, aluguel, viagens.</p>
+        </li>
+        <li>
+          <h3 class="text-xl font-semibold text-blue-800">LegisLupa</h3>
+          <p>Fiscaliza a atuação das Câmaras Municipais: frequência, projetos, gastos e diárias.</p>
+        </li>
+        <li>
+          <h3 class="text-xl font-semibold text-blue-800">Capivara MT</h3>
+          <p>Puxa a ficha pública dos políticos: processos, patrimônio e histórico político.</p>
+        </li>
+        <li>
+          <h3 class="text-xl font-semibold text-blue-800">Onde Foi Parar?</h3>
+          <p>Confere a execução das obras financiadas com dinheiro público: promessa x realidade.</p>
+        </li>
+      </ul>
     </section>
 
     <section id="painel">
-      <h3 class="text-xl font-semibold text-blue-800">Painel de Dados</h3>
-      <p>Explore visualizações interativas com gráficos, mapas e rankings sobre o uso de verbas públicas.</p>
+      <h2 class="text-2xl font-bold mb-4">Painel de Dados</h2>
+      <p>Explore gráficos, mapas e rankings interativos sobre a gestão pública em Mato Grosso.</p>
       <div class="aspect-w-16 aspect-h-9">
-        <iframe class="w-full h-96 border" src="https://lookerstudio.google.com/embed/reporting/uvZC7UgH37s/page/panel" frameborder="0" allowfullscreen></iframe>
+        <iframe class="w-full h-96 border rounded" src="https://lookerstudio.google.com/embed/reporting/uvZC7UgH37s/page/panel" frameborder="0" allowfullscreen></iframe>
       </div>
     </section>
 
-    <section id="denuncie">
-      <h3 class="text-xl font-semibold text-blue-800">Denuncie ou Contribua</h3>
-      <p>Você pode nos ajudar a fiscalizar. Envie denúncias ou informações sobre o uso indevido de recursos públicos.</p>
-      <form action="https://formsubmit.co/seuemail@exemplo.com" method="POST" class="space-y-4">
+    <section id="contato">
+      <h2 class="text-2xl font-bold mb-4">Fale Conosco</h2>
+      <p>Quer denunciar algo, contribuir com informações ou ser parceiro do projeto? Escreva para nós:</p>
+      <form action="https://formsubmit.co/seuemail@exemplo.com" method="POST" class="space-y-4 mt-4">
         <div>
           <label class="block font-semibold">Seu nome (opcional)</label>
           <input type="text" name="nome" class="w-full border p-2 rounded" placeholder="Nome">
         </div>
         <div>
           <label class="block font-semibold">Mensagem</label>
-          <textarea name="mensagem" class="w-full border p-2 rounded" rows="4" placeholder="Descreva o que deseja relatar"></textarea>
+          <textarea name="mensagem" class="w-full border p-2 rounded" rows="4" placeholder="Descreva sua mensagem"></textarea>
         </div>
         <button type="submit" class="bg-blue-700 text-white px-4 py-2 rounded hover:bg-blue-900">Enviar</button>
       </form>
     </section>
   </main>
 
-  <footer class="bg-blue-800 text-white p-6 mt-10">
-    <p class="text-center">© 2025 Projeto Mais Transparência - MT. Todos os direitos reservados.</p>
+  <footer class="bg-blue-900 text-white p-6 mt-10 text-center">
+    <p>© 2025 Projeto Mais Transparência MT — Todos os direitos reservados.</p>
   </footer>
 </body>
 </html>
